--- a/content.en/BookReviews/1q84.md
+++ b/content.en/BookReviews/1q84.md
@@ -6,7 +6,7 @@ weight: 10
 
 # **1Q84**
 
-<h4>Author <span>Haruki Murakami</span></br>Date <span>April 19, 2024</span></br>Rating <span>4/5</span></h4>
+<h4>Author <span class='book_header'>Haruki Murakami</span></br>Date <span class='book_header'>April 19, 2024</span></br>Rating <span class='book_header'>4/5</span></h4>
 
 The last book by Murakami that I had read I had found rather curious. I had read that book at a consequential point in my life, and this book once again finds its way into my sight at another consequential moment. Perhaps it is for these reasons I do not see the book in the same light as many others.  
 
